Fix per minute text overlap

--- a/app/assets/stylesheets/nucore.scss
+++ b/app/assets/stylesheets/nucore.scss
@@ -456,7 +456,7 @@ p.per-minute {
   font-style: italic;
   @extend .text-muted;
   font-size: 85%;
-  margin-top: -0.75em;
+  margin-top: -0.25em;
 }
 
 p.per-minute-show {
